--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "devDependencies": {
     "babel": "^6.5.2",
     "babel-cli": "^6.14.0",
+    "babel-preset-es2015": "^6.14.0",
     "tape": "^4.0.1"
   },
   "dependencies": {
